@@ -17,8 +17,12 @@ apport (0.71) UNRELEASED; urgency=low
   * backends/packaging-dpkg.py, get_modified_files(): Ignore lines in .md5sums
     files which contain a NUL byte. This Should Not Happen™, but nevertheless
     did. (LP: #96050)
+  * apport/ui.py, doc/package-hooks.txt: Check for a field
+    "UnreportableReason: <text>" and display an information box that the
+    current crash cannot be reported because of <text>. Add test case.
+    Document the new field.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 26 Mar 2007 16:56:03 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 26 Mar 2007 17:50:10 +0200
 
 apport (0.70) feisty; urgency=low
 
